# pytest-regex

./: LICENSE  README.md  pyproject.toml  pytest_regex.py  setup.py  tox.ini
.github/workflows/: test.yml
tests/: test_plugin.py
